Revision history for Perl extension AnyEvent.

	- AnyEvent::DNS only followed cname chains with length 2,
          contrary to documentation. bumped it up to 10, thanks to
          microsoft, the current broken-dns-config-king.
	- fix queue management logic in AnyEvent::Handle:
          when on_read was registered, the queue was empty
          and no progress could be made AnyEvent::Handle would
          enter an endless loop.
        - correctly start reading again when the handle became
          busy again after idling.
        - correctly treat tls shut-downs as EOF condition
          (for the time being, would be nice to have a callback for that).
        - correctly call eof callback under all conditions
          (hopefully).
        - the timeout callback did not expect that $self can go
          away any time.

4.12 Tue Jun  3 10:58:04 CEST 2008
	- include AnyEvent::Intro, a tutorial for anyevent,
          anyevent::socket and anyevent::handle.
        - allow more options in on_error.

4.11 Fri May 30 23:42:25 CEST 2008
        - INCOMPATIBLE CHANGE: replace ptr by real PTR lookup, provide
          reverse_lookup and reverse_verify to replace it, support
          v4mapped and v4compat addresses.
	- provide more documentation for the resolver class.
        - really replace longest run of :0: by :: in format_address,
          also properly convert :: and ::1 again.
        - support NAPTR record name and decode it.
        - implement random weight sampling for SRV records, as per
          rfc 2782.
        - correctly abort on srv-record targets of ".".
        - added AnyEvent::DNS::wait_for_slot.
        - in the unlikely event of a virtual circuit connection
          being invalidated by a delayed udp reply, AnyEvent::DNS
          could die. this has been fixed.
        - plug a probable memleak in the DNS vc code.
        - use configured timeout also for VC request phase.
        - implement timeout and max_outstanding methods